# spyphone

./: .gitignore  Dockerfile  README.md  build  deploy  docker-compose.yml  runtest  spyphone.cabal
scripts/: build  build_test  deploy  exec  repl  start_rpi_haskell_machine  sync-deps
scripts/indocker/: build  sync-deps
src/: Main.hs
src/gpio/: Main.hs
src/lib/: Spyphone.hs
src/lib/Spyphone/: GPIO.hs  Prelude.hs
src/spyphone/: Main.hs
