name:                spyphone
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/spyphone#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:   src/lib
  ghc-options:      -Wall
  default-language: Haskell2010
  exposed-modules:
      Spyphone
      Spyphone.GPIO
      Spyphone.Prelude
  default-extensions:
      OverloadedStrings NoImplicitPrelude LambdaCase
      StandaloneDeriving
      KindSignatures DataKinds GADTs
  build-depends:
      base,
      bytestring,
      classy-prelude,
      string-conversions,
      transformers

executable spyphone
  hs-source-dirs:   src/spyphone
  ghc-options:      -Wall
  -- wagon uses -thread, do we want to?
  -- not sure if it's safe on arm
  -- ghc-options:      -Wall -threaded
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:    base, spyphone
  default-extensions:
      OverloadedStrings NoImplicitPrelude LambdaCase
      StandaloneDeriving
      KindSignatures DataKinds GADTs

executable gpio
  hs-source-dirs:   src/gpio
  ghc-options:      -Wall
  -- wagon uses -thread, do we want to?
  -- not sure if it's safe on arm
  -- ghc-options:      -Wall -threaded
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:    base, spyphone
  default-extensions:
      OverloadedStrings NoImplicitPrelude LambdaCase
      StandaloneDeriving
      KindSignatures DataKinds GADTs
